Finish chamber member emails

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -17,7 +17,7 @@
 
     <div>
       <b>Which members do you want to email?</b><br>
-      <select id='email_type_selector'>
+      <select id='email_type_selector', name='email[email_audience_type]'>
         <option value="-1" selected></option>
         <option value=0>Members Currently Playing in a Performance Set</option>
         <option value=1>All Members Playing in an Ensemble in the Last Twelve Months</option>
