Update header logo on anon pages

--- a/app/views/layouts/anonymous.html.erb
+++ b/app/views/layouts/anonymous.html.erb
@@ -10,7 +10,7 @@
 
   <body class="top-anonymous">
     <div class="logo-anonymous">
-      <%= image_tag "SFCMA_Mark_White.png", height: 100 %>
+      <%= image_tag "sfcma-membership.png", height: 120 %>
     </div>
     <% flash.each do |key, value| %>
       <div class="alert alert-<%= key %>">
