--- a/app/views/member_community_nights/new.html.erb
+++ b/app/views/member_community_nights/new.html.erb
@@ -60,7 +60,7 @@
   <% @community_nights.each do |cn| %>
     <div class='performance_set_opt_in_message' id='performance_set_opt_in_message_<%=cn.id%>'>
       <h3><%= cn.name %></h3>
-      <%= cn.description %><br>
+      <%= cn.description.html_safe %><br><br>
       By opting into this community night, you are agreeing to abide by our <b><a href="https://sfcivicmusic.org/code-of-conduct/">Code of Conduct</a></b> for all musicians.
     </div>
   <% end %>
