--- a/app/views/community_nights/edit.html.erb
+++ b/app/views/community_nights/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Community Night</h1>
+<div class='pageHeader'><h2>Editing Existing Community Night</h2></div>
 
 <%= render 'form', community_night: @community_night %>
 
