--- a/app/views/community_nights/new.html.erb
+++ b/app/views/community_nights/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Community Night</h1>
+<div class='pageHeader'><h2>Add New Community Night</h2></div>
 
 <%= render 'form', community_night: @community_night %>
 
