--- a/app/views/performance_sets/_form.html.erb
+++ b/app/views/performance_sets/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(setup_performance_set(performance_set)) do |f| %>
   <% if performance_set.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(performance_set.errors.count, "error") %> prohibited this performance_set from being saved:</h2>
+      <h2><%= pluralize(performance_set.errors.count, "error") %> prohibited this performance set from being saved:</h2>
 
       <ul>
       <% performance_set.errors.full_messages.each do |message| %>
