fix column names

--- a/app/views/community_nights/_form.html.erb
+++ b/app/views/community_nights/_form.html.erb
@@ -13,11 +13,11 @@
 
   <h3 class="formHeader">Community Night Dates</h3>
   <div class="field memberInfoBlock">
-    <%= f.label :start, "<b>Start Date and Time</b><br><i>Format: YYYY-MM-DD hh:mm pm/am</i>".html_safe %>
-    <%= f.text_field :start %>
+    <%= f.label :start_datetime, "<b>Start Date and Time</b><br><i>Format: YYYY-MM-DD hh:mm pm/am</i>".html_safe %>
+    <%= f.text_field :start_datetime %>
     <br><br>
-    <%= f.label :end, "<b>End Date and Time</b><br><i>Format: YYYY-MM-DD hh:mm pm/am</i>".html_safe %>
-    <%= f.text_field :end %>
+    <%= f.label :end_datetime, "<b>End Date and Time</b><br><i>Format: YYYY-MM-DD hh:mm pm/am</i>".html_safe %>
+    <%= f.text_field :end_datetime %>
   </div>
 
   <h3 class="formHeader">Name and Description</h3>
