--- a/app/views/community_nights/show.html.erb
+++ b/app/views/community_nights/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Start:</strong>
-  <%= @community_night.start %>
+  <%= @community_night.start_datetime %>
 </p>
 
 <p>
   <strong>End:</strong>
-  <%= @community_night.end %>
+  <%= @community_night.end_datetime %>
 </p>
 
 <p>
