--- a/app/views/community_nights/index.html.erb
+++ b/app/views/community_nights/index.html.erb
@@ -4,7 +4,7 @@
 
 <% @community_nights.each do |community_night| %>
   <b><%= community_night.name %></b> –
-  <%= community_night.start.strftime('%b %e %Y') %>
+  <%= community_night.start_datetime.strftime('%b %e %Y') %>
   &emsp; – &emsp;
   <%= link_to 'View Roster', roster_community_night_url(community_night.id) %>&emsp; – &emsp;
   <%= link_to 'View Details', community_night %>&emsp; – &emsp;
