--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -22,7 +22,7 @@
         <option value=0>Members Currently Playing in a Performance Set</option>
         <option value=1>All Members Playing in an Ensemble in the Last Twelve Months</option>
         <% if current_user.global_admin? || current_user.id == 5 %><option value=2>All Members Participating in the Last Twelve Months</option><% end %>
-        <% if current_user.id == 1 || current_user.id == 2 %><option value=3>Chamber List (all members in last six months, or played with us last twelve months)</option><% end %>
+        <option value=3>Chamber List (all members in last six months, or played with us last twelve months)</option>
       </select>
     </div>
 
