--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -4,8 +4,8 @@
       <h2><%= pluralize(member.errors.count, "error") %> prohibited this member from being saved:</h2>
 
       <ul>
-      <% member.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% member.errors.messages.values.each do |message| %>
+        <li style="list-style-type: none;"><%= raw message[0].gsub("You're", "A user with this email address").split("!")[0] %></li>
       <% end %>
       </ul>
     </div>
