--- a/app/views/members/signup.html.erb
+++ b/app/views/members/signup.html.erb
@@ -56,4 +56,4 @@
 </div>
 
 <i class='form-disclaimer'>If you have any questions or issues with this form,
-  please contact membership@sfcivicsymphony.org</i>
+  please contact membership@sfcivicmusic.org</i>
