revert changes to no-reply email address

--- a/app/views/absences/new.html.erb
+++ b/app/views/absences/new.html.erb
@@ -8,5 +8,5 @@
   </div>
 
   <i class='form-disclaimer'>If you have any questions or issues with this form,
-  please contact membership@sfcivicsymphony.org</i>
+  please contact membership@sfcivicmusic.org</i>
 <% end %>
