references to old email, updated script

--- a/app/views/absences/_form.html.erb
+++ b/app/views/absences/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <% unless current_user %>
-    <i>This form replaces the missing@sfcivicsymphony.org email address.<br>
+    <i>This form replaces the missing@sfcivicmusic.org email address.<br>
       Please use it to record all reheasal absences.</i>
   <% end %>
 
