--- a/app/views/member_mailer/standard_member_email.html.erb
+++ b/app/views/member_mailer/standard_member_email.html.erb
@@ -7,4 +7,4 @@
 You received this email because you <%= @status_text %> <%= @perf_set_name %><%= @instrument.present? ? " playing #{@instrument}" : "" %>.
 This email was sent by <%= @sent_by_label %> through our membership management system.
     If you believe you have recieved this email in error, please contact this individual directly,
-    or email membership@sfcivicsymphony.org. <img src="<%= ping_email_logs_url %>?member_id=<%=@member_id%>&email_id=<%=@email_id%>" width="1" height="1"></p>
+    or email membership@sfcivicmusic.org. <img src="<%= ping_email_logs_url %>?member_id=<%=@member_id%>&email_id=<%=@email_id%>" width="1" height="1"></p>
