--- a/app/views/member_community_nights/new.html.erb
+++ b/app/views/member_community_nights/new.html.erb
@@ -41,7 +41,7 @@
     <span class='over_limit' id='over_limit'>
       Thanks for expressing an interest in playing in this community night! Unfortunately, at this
       time this community night is full on <b id='instrument_specified'></b>. Please use the dropdown above or contact
-      membership@sfcivicsymphony.org for other playing opportunities.
+      membership@sfcivicmusic.org for other playing opportunities.
     </span>
     <span class='standby_only' id='standby_only'>
       <b>Interested in Being a Standby Player?</b><br><br>
@@ -53,7 +53,7 @@
       It is likely you would be able to join us, but we cannot guarantee a place
       in the concert.
       <br><br>
-      Contact membership@sfcivicsymphony.org with any questions about being a standby player.
+      Contact membership@sfcivicmusic.org with any questions about being a standby player.
     </span>
   </div>
 
@@ -72,4 +72,4 @@
 </div>
 
 <i class='form-disclaimer'>If you have any questions or issues with this form,
-  please contact membership@sfcivicsymphony.org</i>
+  please contact membership@sfcivicmusic.org</i>
