--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-<br><br>
+<div class='pageHeader'><h2>Editing <%= @user.name %></h2></div>
+
+<br>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -14,12 +15,20 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name, autocomplete: "off" %>
+  </div><br>
+
+  <div class="field">
+    <%= f.label :phone, "Phone Number" %>
+    <%= f.text_field :phone, autocomplete: "off" %>
+  </div><br>
+
+  <div style='border: 1px solid gray; padding: 10px;'>
+  <b>Leave these fields blank unless you want to change your password</b>
+  <div class="field">
     <%= f.label :password, "New Password" %>
     <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
   </div><br>
 
   <div class="field">
@@ -30,13 +39,13 @@
   <div class="field">
     <%= f.label :current_password, "Current Password" %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
-  </div><br>
+  </div>
+
+  </div>
+  <br>
+
 
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
-
-<%# <h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
