--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,15 @@
     <div class='bar'>
       <% if user_signed_in? %>
         <div class='loginInfo'>
-          Logged in as <%= current_user.email %> &emsp; &middot; &emsp;
-          <%= link_to "Change Password", edit_user_registration_path %> &emsp; &middot; &emsp;
-          <b><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></b>
+          Logged in as <%= current_user.name ? current_user.name : current_user.email %> &emsp;
+          <%= link_to "Change Password", edit_user_registration_path %> &emsp;
+          <b class='nav_link'><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></b>
         </div>
       <% end %>
-      <b><%= link_to 'Home Page', root_path %></b> &emsp; &middot; &emsp;
+      <b class='nav_link'><%= link_to 'Home Page', root_path %></b> &emsp;
       <% if user_signed_in? %>
-        <b><%= link_to 'Membership Roster', members_path %></b> &emsp; &middot; &emsp;
-        <b><%= link_to 'Waivers', waivers_members_path %></b>
+        <b class='nav_link'><%= link_to 'Membership Roster', members_path %></b> &emsp;
+        <b class='nav_link'><%= link_to 'Waivers', waivers_members_path %></b>
 
       <% else %>
         Not logged in. <%= link_to "Log In", new_user_session_path %>
