--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class='pageHeader'><h2>Admin Users</h2></div>
+<div class='pageHeader'><h2>Membership System Users</h2> &emsp; &emsp; <%= link_to 'Add New User', new_user_path, class: 'button'  %></div>
 
 <br><br>
 <% @users.each do |user| %>
