--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,10 +1,18 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.name ? @resource.name : @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password on the SF Civic Music's Membership Management System. </p>
+<p>Someone has requested a link to change your password <b>(or you have been given a new account)</b> on the SF Civic Music's Membership Management System. </p>
 
 <p>Please click on the link below to reset your password and access the system.</p>
 
 <p><%= link_to 'Reset my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>If you didn't request this, please ignore this email.</p>
+
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+<p>If you have any questions or concerns, or you suspect this message was sent in error, please contact the Membership Committee at membership@sfcivicmusic.org</p>
+
+<p>Thank you!<p>
+
+<p>SF Civic Music<br>
+Membership Committee</p>
