Ability to view and set vaccination status for appropriate users; permissions applied; audit logs appropriately updated

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -689,3 +689,10 @@ label {
   width: 400px;
   display: block;
 }
+
+.vaccination-status {
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  padding: 8px 0px;
+  margin-right: 20px;
+}
