--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,6 +20,13 @@
     <%= f.text_field :phone %>
   </div>
   <br>
+  
+  <div class="field">
+    <%= f.label :vaccination_manager do %>
+      <%= f.check_box :vaccination_manager %>
+      <b>Vaccination Manager</b>
+    <% end %>
+  </div><br>
 
   <div class="field">
     <%= f.label :global_admin do %>
